# opticus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: README.md
include/: Camera.hpp  Cubemap.hpp  Framebuffer.hpp  Image.hpp  Program.hpp  ScreenMesh.hpp  ScreenQuad.hpp  Shader.hpp  Texture2D.hpp  shader_list.h
shaders/: AABB.glsl  aabb.glsl  accum.glsl  frag.glsl  geometry.glsl  limits.glsl  primitives.glsl  random.glsl  ray.glsl  scene.glsl  shape.glsl  sphere.glsl  utility.glsl  vert.glsl
shaders/core/: limits.glsl  material.glsl  random.glsl  ray.glsl  scene.glsl  shape.glsl  utility.glsl
shaders/materials/: dielectric.glsl  lambertian.glsl  metal.glsl
shaders/shapes/: aabb.glsl  sphere.glsl
src/: Camera.cpp  Cubemap.cpp  Program.cpp  ScreenMesh.cpp  ScreenQuad.cpp  Shader.cpp  main.cpp
